--- a/stylesheets/sass/styles.sass
+++ b/stylesheets/sass/styles.sass
@@ -1,3 +1,13 @@
+body
+  background-color: #ccc
+
 .yaml
   border-radius: 3px
-  border: 1px solid blue
+  background-color: #bbb
+  -webkit-box-shadow: 0 0 1em #bbb
+  margin: 2em
+  padding: 1em
+  
+h1, h2, h3, h4
+  text-shadow: #999 0 0 20px
+  color: rgb(100, 100, 50)
